@@ -1,3 +1,5 @@
+- Bug fix: Fixes Excel upload on Treasury Imports via file [#ISCTE-FENIXEDU-711]
+
 11.17.2 (08-07-2024)
 - Bug Fix: Provide the degree associated with academic treasury event, for service requests [#UL-FMH-2278]
 
